--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "build": "cross-env NODE_ENV=production  webpack --config build/webpack.base.js  --inline --progress"
   },
   "config": {
-   "commitizen": {
-     "path": "cz-conventional-changelog"
-   }
- },
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shibin-you/js-module.git"
@@ -58,7 +58,9 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "koa-webpack": "^5.2.3"
+    "koa-webpack": "^5.2.3",
+    "mysql": "^2.17.1"
   }
 }
